# kmc

./: .dockerignore  .gitignore  README.md  pyproject.toml
src/kmc/: base.py
src/kmc/model/: __init__.py  dmdc.py  edmdc.py  kaec.py
src/kmc/utils/: mlflow.py  model_wrapper.py  nn.py  observable.py
sysid/: Dockerfile  README.md  requirements.txt  run_local.sh
sysid/config/kaec/: dmdc_config.yaml  edmdc_config.yaml  vanilla_config.yaml
sysid/container/: Dockerfile  singularity.def
sysid/notebook/: ETL.ipynb
sysid/script/: edmdc.py  process.py  setup.py  train.py  validate.py
sysid/script/utils/: data.py  validate.py
test/: koopman.ipynb
