[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kmc"
version = "0.1.0"
authors = [
  { name="Tanbjs", email="benjaset.m@gmail.com" },
]
description = "Koopman Model Control package"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "pytorch-lightning==2.6.1",
    "torch==2.10.0",
    "torchmetrics==1.8.2",
    "torchvision==0.25.0",
    "mlflow==3.9.0",
    "scikit-learn==1.7.2"
]

[tool.setuptools.packages.find]
where = ["src"]